[package]
name = "teapot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.79"
clap = { version = "4.2.2", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.160", features = ["derive"] }
term = "0.7.0"
toml = "0.7.3"
walkdir = "2.3.3"
