[package]
name = "tpot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Jack Whitehorn jackwh.whitehorn@gmail.com"]
description = "A cargo inspired build tool for C"
homepage = "https://github.com/jw2476/teapot"
repository = "https://github.com/jw2476/teapot"
keywords = ["cli", "build", "c"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.79"
clap = { version = "4.2.2", features = ["derive"] }
colored = "2.0.0"
duct = "0.13.6"
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
term = "0.7.0"
toml = "0.7.3"
toml_edit = "0.19.8"
walkdir = "2.3.3"
